chore(to-change): put token on register
